examples/passing/ExportExplicit2/M1.purs
module M1 (bar) where

foo :: Int
foo = 0

bar :: Int
bar = foo
