examples/failing/ExportExplicit1/M1.purs
module M1 (X(X)) where

data X = X | Y
